# Web_Crawler

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/: __init__.py  auth.py  dependencies.py  main.py  middleware.py
api/routes/: books.py  changes.py
api/schemas/: books.py  common.py
config/: __init__.py  logging_config.py  settings.py
crawler/: __init__.py  client.py  main.py  models.py  parser.py  scraper.py  state.py
database/: __init__.py  connection.py  indexes.py  models.py
database/repositories/: __init__.py  book_repository.py  change_repository.py  state_repository.py
docs/: sample_books.json
scheduler/: __init__.py  change_detector.py  main.py  reporter.py  tasks.py
tests/: __init__.py  conftest.py
tests/e2e/: test_crawler.py  test_scheduler.py
tests/fixtures/: book_page.html  catalog_page.html
tests/integration/: test_api.py  test_change_detector.py  test_repositories.py
tests/unit/: test_client.py  test_hashing.py  test_models.py  test_parser.py  test_retry.py  test_utils.py
utils/: exceptions.py  hashing.py  retry.py  validators.py
